fixed some issues

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -39,12 +39,7 @@
 .pi-inv .pi-from-logo img {
     max-width: 200px !important;
     max-height: 80px;
-}
-
-//TODO: temporary css
-/* h4.from-title {
-    font-family: "Inter", sans-serif !important;
-} */ 
+} 
 
 .wp-admin .pi-left-sidebar, .wp-admin .pi-top-menu-content {
     display: none;
@@ -87,17 +82,7 @@
     .pi-inv-feedback {
         display: none;
     }
-}
-
-/* .pi-inv .pi-bank-info {
-    font-size: 12px;
-} */
-
-//remove it from main file
-/* .ncpi .pi-right-content {
-    overflow: inherit;
-    height: auto;
-} */
+} 
 
 .pi-inv-preview-wrap {
     border: 1px solid #dfdfdf;
@@ -131,25 +116,7 @@
 //TODO: this class already exist just add important
 .ncpi .pi-modal-sidebar {
     margin: 0 !important;
-} 
-
-.pi-list-single-select {
-    width: 150px;
-    float: right;
-    text-align: left;
-    margin-left: 10px;
-    margin-top: -10px;
-    input:focus {
-        box-shadow: none;
-    }
-} 
-
-.wp-admin.ncpi .pi-right-content {
-    height: auto !important;
-}
-.wp-admin.ncpi {
-    background-color: #f7f8fa !important;
-}
+}  
 
 .pi-field-action {
     display: inline-block;
@@ -157,17 +124,27 @@
     top: -2px;
     position: relative;
 }
+ 
+.wp-admin.ncpi {
+    background-color: #f7f8fa !important;
 
-/* .wp-admin.ncpi {
-    .pi-modal-sidebar .pi-modal-header {
-        padding-top: 70px;
+    .pi-right-content {
+        height: auto !important;
     }
-} */
-.pi-deal-content { 
-    max-width: none !important; 
-    overflow-x: scroll; 
-    height: 100vh; 
+
+    /* .pi-board-content {
+        height: calc(100vh - 404px);
+    } */
 } 
-.wp-admin .pi-deal-content {
-    height: auto;
-}
+ 
+.ncpi {
+    .pi-deal-content { 
+        max-width: none !important; 
+        overflow-x: scroll;  
+    } 
+
+    .pi-board-content {
+        height: calc(100vh - 396px);
+    }
+} 
+ 
