--- a/src/admin/scss/welcome.scss
+++ b/src/admin/scss/welcome.scss
@@ -3,7 +3,7 @@
 body.toplevel_page_ncpi-welcome {
 	margin-top: -32px;
 	background: #fff; 
-	font-family: "Nunito", sans-serif;
+	// font-family: "Nunito", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility
