added plugin css

--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -149,6 +149,7 @@
   margin-right: 40px;
   font-size: 12px;
   color: #718096;
+  margin-bottom: 0;
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content ul li {
