--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1024,9 +1024,6 @@ html {
   top: 2px;
   margin-right: 7px;
 }
-.ncpi .pi-accordion-table-list ul li:nth-child(n+3) {
-  text-align: right;
-}
 .ncpi .pi-accordion-table-list ul li {
   color: #718096;
   font-size: 12px;
@@ -1082,7 +1079,7 @@ html {
 }
 .ncpi .pi-accordion-table-list ul li .pi-dropdown-content {
   top: 30px;
-  left: -35px;
+  left: -35px !important;
 }
 .ncpi .pi-accordion-table-list .pi-action-content .pi-dropdown-content {
   text-align: left;
@@ -1665,6 +1662,7 @@ html {
   background-position-x: 85%;
   background-position-y: 44%;
   line-height: 100%;
+  font-size: 12px;
 }
 .ncpi .pi-search-bar .pi-total-list p span {
   font-weight: 500;
@@ -2056,11 +2054,11 @@ html {
 .wp-admin .pi-info-form-list .pi-calendar {
   padding: 8px 7px !important;
 }
-.wp-admin .ncpi .pi-info-table-content .pi-info-table td select {
+.wp-admin .pi-info-table-content .pi-info-table td select {
   padding: 5px 6px !important;
   height: 35px;
 }
-.wp-admin .ncpi .pi-accordion-wrapper .pi-field-switch-big {
+.wp-admin .pi-accordion-wrapper .pi-field-switch-big {
   top: 0;
 }
 .wp-admin .pi-field-checkbox input[type=radio],
@@ -2069,21 +2067,21 @@ html {
   position: relative;
   top: 2px;
 }
-.wp-admin .ncpi .pi-search-bar .pi-total-list p select {
+.wp-admin .pi-search-bar .pi-total-list p select {
   padding: 0px 20px 0px 4px !important;
 }
-.wp-admin .ncpi .pi-table input[type=checkbox] {
-  zoom: 1.2;
+.wp-admin .pi-task-btn span {
+  padding-right: 8px !important;
+}
+.wp-admin .pi-table input[type=checkbox] {
+  zoom: 1.2 !important;
   top: -1px !important;
 }
 .wp-admin .react-datepicker {
   border: 1px solid #CBD5E0 !important;
 }
-.wp-admin .react-datepicker-popper[data-placement^=bottom] .react-datepicker__triangle::before {
-  border-bottom-color: #CBD5E0 !important;
-}
 .wp-admin .react-datepicker-popper[data-placement^=bottom] .react-datepicker__triangle::after {
-  border-bottom-color: #CBD5E0 !important;
+  border-bottom-color: #FAFAFB !important;
 }
 .wp-admin .react-datepicker__header {
   color: #4A5568 !important;
@@ -2266,7 +2264,7 @@ html {
 }
 .ncpi .pi-modal-style-two .pi-close {
   background: none;
-  top: 50%;
+  top: 54%;
   right: 15px;
 }
 .ncpi .pi-modal-style-two .pi-color-white {
@@ -4068,7 +4066,8 @@ select {
 .ncpi .pi-form-style-one input[type=number]:focus,
 .ncpi .pi-form-style-one input[type=email]:focus,
 .ncpi .pi-form-style-one input[type=text]:focus {
-  border: 1px solid #4C6FFF !important;
+  border: 1px solid #4C6FFF;
+  box-shadow: none !important;
 }
 .ncpi .pi-form-style-one textarea {
   border: 1px solid #CBD5E0;
@@ -4295,11 +4294,6 @@ select {
   position: relative;
   display: flex;
   align-items: center;
-}
-.ncpi .pi-left-sidebar ul li a .pi-Profeature {
-  margin-left: -3px;
-  position: relative;
-  top: 2px;
 }
 .ncpi .pi-left-sidebar ul li a img {
   position: relative;
