--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -2037,7 +2037,7 @@ html {
 .wp-admin .pi-modal-style-two .pi-modal-footer {
   padding: 0 30px 0px;
 }
-.wp-admin .ncpi .pi-table input[type=checkbox] {
+.wp-admin .pi-table input[type=checkbox] {
   zoom: 1 !important;
   top: -2px !important;
 }
@@ -2130,7 +2130,7 @@ html {
 .ncpi .pi-overlay {
   visibility: visible;
   opacity: 1;
-  z-index: 99;
+  z-index: 99999;
   overflow-x: hidden;
   overflow-y: auto;
 }
