--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -245,14 +245,14 @@
   width: 32px !important;
 }
 .ncpi .pi-task-btn img {
-  width: 15px;
-  height: 20px;
+  max-width: 15px;
+  max-height: 20px;
 }
 .ncpi .pi-task-btn span {
   font-size: 12px;
   position: relative;
   top: -5px;
-  padding-right: 3px;
+  padding-right: 8px !important;
   color: #718096;
 }
 .ncpi .pi-task-btn-two {
