--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1083,7 +1083,7 @@ html {
 }
 .ncpi .pi-accordion-table-list .pi-action-content .pi-dropdown-content {
   text-align: left;
-  left: -65px;
+  left: -65px !important;
 }
 .ncpi .pi-info-table-content {
   margin-top: 20px;
@@ -1296,17 +1296,18 @@ html {
 .ncpi .pi-logo-content img {
   width: 36px;
   height: 36px;
-  margin: auto;
 }
-.ncpi .pi-logo-content strong {
+.ncpi .pi-logo-content {
+  display: flex;
+  align-items: center;
+}
+.ncpi strong {
   position: relative;
-  top: -10px;
   left: 10px;
   font-size: 24px;
   font-weight: 600;
 }
 .ncpi .pi-site-logo strong {
-  top: -12px;
   font-size: 18px;
 }
 .ncpi .pi-width-content {
@@ -1315,6 +1316,7 @@ html {
   padding: 15px 70px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 @media screen and (max-width: 992px) {
   .ncpi .pi-width-content {
@@ -1658,7 +1660,7 @@ html {
   margin: 0 5px 0 5px;
   border: 1px solid #CBD5E0;
   outline: none;
-  padding: 4px 20px 4px 4px;
+  padding: 40px 20px 4px 4px;
   background-position-x: 85%;
   background-position-y: 44%;
   line-height: 100%;
@@ -1918,14 +1920,14 @@ html {
   border-radius: 5px;
 }
 .ncpi .pi-dropbtn {
+  display: flex;
+  align-items: center;
   background-color: transparent;
   color: #718096;
   font-size: 14px;
   border: none;
   cursor: pointer;
   font-weight: 500;
-  margin-top: -14px;
-  padding-bottom: 10px;
 }
 @media screen and (max-width: 768px) {
   .ncpi .pi-dropbtn {
@@ -1934,6 +1936,7 @@ html {
 }
 .ncpi .pi-top-menu-content .pi-dropdown {
   position: relative;
+  left: 5px;
 }
 @media screen and (max-width: 992px) {
   .ncpi .pi-top-menu-content .pi-dropdown {
@@ -1942,8 +1945,6 @@ html {
 }
 .ncpi .pi-top-menu-content .pi-dropdown img {
   margin-right: 10px;
-  position: relative;
-  top: 13px;
 }
 @media screen and (max-width: 420px) {
   .ncpi .pi-top-menu-content .pi-dropdown img {
@@ -1953,7 +1954,7 @@ html {
 }
 .ncpi .pi-top-menu-content .pi-dropdown-content {
   top: 57px;
-  left: 20px;
+  left: 14px;
 }
 .ncpi .pi-dropdown-content {
   display: none;
@@ -2038,7 +2039,7 @@ html {
   padding: 0 30px 0px;
 }
 .wp-admin .pi-table input[type=checkbox] {
-  zoom: 1 !important;
+  zoom: 1.2 !important;
   top: -2px !important;
 }
 .wp-admin .pi-table tr th:first-child input[type=checkbox] {
@@ -2059,7 +2060,7 @@ html {
   height: 35px;
 }
 .wp-admin .pi-accordion-wrapper .pi-field-switch-big {
-  top: 0;
+  top: 0 !important;
 }
 .wp-admin .pi-field-checkbox input[type=radio],
 .wp-admin .pi-field-checkbox input[type=checkbox] {
@@ -2070,9 +2071,6 @@ html {
 .wp-admin .pi-search-bar .pi-total-list p select {
   padding: 0px 20px 0px 4px !important;
 }
-.wp-admin .pi-task-btn span {
-  padding-right: 8px !important;
-}
 .wp-admin .pi-table input[type=checkbox] {
   zoom: 1.2 !important;
   top: -1px !important;
@@ -2080,7 +2078,7 @@ html {
 .wp-admin .react-datepicker {
   border: 1px solid #CBD5E0 !important;
 }
-.wp-admin .react-datepicker-popper[data-placement^=bottom] .react-datepicker__triangle::after {
+.wp-admin .react-datepicker__triangle::after {
   border-bottom-color: #FAFAFB !important;
 }
 .wp-admin .react-datepicker__header {
@@ -3032,7 +3030,7 @@ html {
 .pi-form-accordion .pi-tab-label {
   display: flex;
   justify-content: space-between;
-  padding: 12px 12px 12px 45px;
+  padding: 12px 12px 12px 40px;
   font-weight: 500;
   cursor: pointer;
   border-radius: 5px;
@@ -3152,9 +3150,9 @@ html {
   margin-top: -23px !important;
 }
 .pi-form-accordion.pi-additional .pi-tab input[type=checkbox] {
-  top: 30px;
+  top: 32px;
   left: 12px;
-  zoom: 1.2;
+  zoom: 1.1;
   box-shadow: none;
   z-index: 10;
 }
@@ -3181,9 +3179,8 @@ html {
 }
 .pi-form-accordion.pi-additional .pi-radio-content .pi-radio-group input[type=radio] {
   position: relative;
-  top: 1px;
+  top: 0px;
   left: 0;
-  zoom: 1.3;
 }
 .pi-form-accordion.pi-additional .pi-radio-content span {
   font-size: 13px;
@@ -4265,7 +4262,7 @@ select {
   padding-bottom: 50px;
 }
 .ncpi .pi-left-sidebar .pi-logo-content {
-  padding: 16px 30px;
+  padding: 19px 30px;
   position: fixed;
   z-index: 9;
   background: #fff;
