--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -5231,3 +5231,7 @@ select {
     display: inline-block !important;
   }
 }
+
+.pi-accordion-wrapper .pi-field-switch-big {
+  top: 0 !important;
+}
