--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -238,7 +238,7 @@
 .ncpi .pi-task-btn {
   background: transparent;
   border: 1px solid #CBD5E0 !important;
-  padding: 5px 6px 3px;
+  padding: 5px 6px 3px !important;
   border-radius: 5px;
   margin-right: 5px;
   border-style: dashed !important;
