--- a/src/admin/js/react/components/welcome/style.scss
+++ b/src/admin/js/react/components/welcome/style.scss
@@ -35,7 +35,7 @@
 }
 .ncpi .pi-welcome-title-content {
   text-align: center;
-  margin-bottom: 45px;
+  margin-bottom: 30px;
 }
 .ncpi .pi-welcome-title-content .pi-welcome-title {
   font-weight: 700;
@@ -50,9 +50,12 @@
   right: 0;
   margin: auto;
   max-width: 750px;
-  border-radius: 40px;
+  border-radius: 50px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 45px 60px;
+  padding: 80px 60px 65px;
+}
+.ncpi .pi-container.pi-p-tb {
+  padding: 30px 60px 40px;
 }
 @media screen and (max-width: 768px) {
   .ncpi .pi-container {
@@ -70,7 +73,7 @@
 }
 .ncpi .pi-logo-content {
   text-align: center;
-  margin-bottom: 33px;
+  margin-bottom: 40px;
 }
 .ncpi .pi-buttons.pi-text-center a {
   display: table;
@@ -97,7 +100,7 @@
   margin-bottom: 45px;
 }
 .ncpi .pi-welcome-tabs-content #pi-finished .pi-buttons a {
-  padding: 15px 20px;
+  padding: 2px 10px;
   font-weight: 600;
   border-radius: 8px;
   color: #fff;
@@ -106,6 +109,7 @@
   font-size: 14px;
   margin-left: 10px;
   display: inline-block;
+  margin-top: 15px;
 }
 .ncpi .pi-welcome-tabs-content #pi-finished .pi-buttons a:first-child {
   margin-left: 0px;
