--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1016,9 +1016,6 @@ html {
   margin-top: -10px;
   margin-left: -15px;
 }
-.ncpi .pi-accordion-table-list ul li:nth-child(n+2) {
-  padding-top: 7px;
-}
 .ncpi .pi-accordion-table-list ul li:nth-child(2) svg {
   position: relative;
   top: 2px;
@@ -1072,10 +1069,11 @@ html {
   width: 15px !important;
 }
 .ncpi .pi-accordion-table-list ul li .pi-btn-medium {
-  margin-top: -2px;
+  margin-top: -4px;
 }
 .ncpi .pi-accordion-table-list ul li .pi-btn-small {
   margin-top: -2px;
+  font-size: 12px;
 }
 .ncpi .pi-accordion-table-list ul li .pi-dropdown-content {
   top: 30px;
@@ -1136,7 +1134,7 @@ html {
 .ncpi .pi-info-table-content .pi-info-table td .pi-field-checkbox {
   margin-bottom: 0;
 }
-.ncpi .pi-info-table-content .pi-info-table td input[type=text] {
+.ncpi .pi-info-table-content .pi-info-table td input[type=number] {
   font-size: 14px;
 }
 .ncpi .pi-info-table-content .pi-info-table td input[type=number],
@@ -1927,7 +1925,7 @@ html {
   display: flex;
   align-items: center;
   background-color: transparent;
-  color: #718096;
+  color: #718096 !important;
   font-size: 14px;
   border: none;
   cursor: pointer;
@@ -2079,6 +2077,10 @@ html {
   zoom: 1.2 !important;
   top: -1px !important;
 }
+.wp-admin .pi-info-table-content .pi-info-table td select {
+  padding: 11px 6px !important;
+  line-height: 100%;
+}
 .wp-admin .pi-field-select textarea:focus,
 .wp-admin .pi-field-select select:focus,
 .wp-admin .pi-field-select input[type=url]:focus,
@@ -2126,45 +2128,83 @@ html {
   background-color: #3157F0 !important;
 }
 
+.twentytwentyone-theme button:focus {
+  outline: none;
+}
+.twentytwentyone-theme button {
+  background-color: transparent !important;
+}
+.twentytwentyone-theme .pi-timeline-box ul {
+  margin-top: 15px;
+}
+.twentytwentyone-theme .pi-accordion-table-list ul li {
+  margin-bottom: 0;
+}
+.twentytwentyone-theme .pi-table-action input[type=checkbox] {
+  zoom: 0.6 !important;
+  border: 1px solid rgba(147, 147, 147, 0.9411764706);
+  top: 2px;
+}
+.twentytwentyone-theme input[type=checkbox] {
+  zoom: 0.8 !important;
+}
+.twentytwentyone-theme table,
+.twentytwentyone-theme th,
+.twentytwentyone-theme td {
+  border: none;
+}
+.twentytwentyone-theme .pi-accordion-table input[type=checkbox] {
+  zoom: 0.6;
+  top: 6px;
+  border: 1px solid rgba(147, 147, 147, 0.9411764706);
+}
+.twentytwentyone-theme .pi-table tr th:first-child input[type=checkbox] {
+  top: 6px;
+}
+.twentytwentyone-theme input[type=checkbox]:focus {
+  outline: none !important;
+}
+
+button {
+  padding: 0;
+}
+
+table {
+  margin: 0;
+}
+
+table,
+th,
+td {
+  border: none;
+}
+
+.pi-table tr th {
+  line-height: 27px;
+}
+
 .twentytwenty-theme svg,
 .twentytwenty-theme img,
 .twentytwenty-theme embed,
 .twentytwenty-theme object {
   display: inline-block !important;
 }
-.twentytwenty-theme button {
-  padding: 0;
-}
 .twentytwenty-theme ul li {
   margin: 0;
-}
-.twentytwenty-theme table {
-  margin: 0;
-}
-.twentytwenty-theme table,
-.twentytwenty-theme th,
-.twentytwenty-theme td {
-  border: none;
-}
-.twentytwenty-theme .pi-table tr th {
-  line-height: 27px;
 }
 .twentytwenty-theme .pi-accordion-table {
   padding: 0;
 }
-.twentytwenty-theme input[type=checkbox] {
-  zoom: 0.8 !important;
-}
 .twentytwenty-theme .pi-table tr th:first-child input[type=checkbox] {
   top: 6px !important;
-}
-.twentytwenty-theme .pi-accordion-table input[type=checkbox] {
-  zoom: 1 !important;
 }
 @media (min-width: 700px) {
   .twentytwenty-theme section {
     padding: 0;
   }
+}
+.twentytwenty-theme input[type=checkbox] {
+  zoom: 0.8 !important;
 }
 .twentytwenty-theme .pi-settings-horizontal-tab {
   margin-left: 0;
@@ -3315,7 +3355,7 @@ html {
 .pi-field-radio-input select,
 .pi-field-checkbox-input select {
   width: 65px !important;
-  margin-left: -2px;
+  margin-left: -1px;
   padding: 10px 6px !important;
   font-size: 11px !important;
   border-radius: 0px 4px 4px 0 !important;
